“第二次，完善登录功能”
Signed-off-by: public <aa1003770783@qq.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
- server.port=8887
+server.port=8887
+github.client.id=82d37e17d3479323fca5
+github.client.secret=344bc7bb09a6f4c49aaf4d7190bf1462fdb4c0e3
+github.redirect.uri=http://localhost:8887/callback
+
