--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@ server.port=8887
 github.client.id=82d37e17d3479323fca5
 github.client.secret=344bc7bb09a6f4c49aaf4d7190bf1462fdb4c0e3
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:E:/All_Object/ideaObject/community
+spring.datasource.username=lol
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
+
 
