--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
+			<version>1.4.199</version>
 		</dependency>
 
 	</dependencies>
@@ -81,6 +82,23 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>5.2.4</version>
+				<configuration>
+					<url>jdbc:h2:E:/All_Object/ideaObject/community</url>
+					<user>lol</user>
+					<password>123</password>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.h2database</groupId>
+						<artifactId>h2</artifactId>
+						<version>1.4.199</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
