--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
 			<version>1.16.18</version>
 			<scope>provided</scope>
 		</dependency>
+
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-devtools</artifactId>
+				<optional>true</optional>
+			</dependency>
+
 	</dependencies>
 
 	<build>
